--- a/themes/timeframe/assets/scss/templates/_main.scss
+++ b/themes/timeframe/assets/scss/templates/_main.scss
@@ -3,6 +3,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  h1{
+    color:white;
+  }
 }
 
 .social-icons a {
