--- a/themes/timeframe/layouts/_default/single.html
+++ b/themes/timeframe/layouts/_default/single.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row justify-content-center">
       {{ if .Params.image }}
-      <div class="col-lg-10 mb-5">
+      <div class="post-header-image col-lg-10 mb-5">
         <img src="{{ .Params.image | absURL }}" alt="{{.Title}}" class="img-fluid w-100">
       </div>
       {{ end }}
