--- a/themes/timeframe/assets/scss/_common.scss
+++ b/themes/timeframe/assets/scss/_common.scss
@@ -163,3 +163,20 @@ textarea.form-control {
   height: 150px !important;
   padding: 20px 0 !important;
 }
+
+.spost-header-image{
+  height:200px;
+  width:1000px;
+  max-height:500px;
+  background-size:cover;
+}
+
+.post-header-image{
+  text-align:center;
+  img{
+    max-width:660px;
+    max-height:auto;
+    box-shadow:none;
+    border:none;
+  }
+}
