--- a/themes/timeframe/assets/scss/_typography.scss
+++ b/themes/timeframe/assets/scss/_typography.scss
@@ -12,7 +12,7 @@ body {
 p, .paragraph {
   font-weight: 400;
   color: $text-color;
-  font-size: 15px;
+  font-size: 19px;
   line-height: 1.7;
   font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
 }
@@ -29,7 +29,8 @@ h1, .h1{
 }
 
 h2, .h2{
-  font-size: 38px;
+  font-size: 28px;
+  margin-top:35px;
 }
 
 h3, .h3{
