--- a/themes/timeframe/layouts/_default/single.html
+++ b/themes/timeframe/layouts/_default/single.html
@@ -13,7 +13,7 @@
         <ul class="post-meta mb-4">
           <li><i class="fa fa-calendar"></i>{{ .PublishDate.Format "2/6/2006" }}</li>
           <li><i class="fa fa-pencil-square-o"></i><a
-              href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize }}/">{{ .Params.author }}</a></li>
+              href="{{ `guest/` | relLangURL }}{{ .Params.Guest | urlize }}/">{{ .Params.guest }}</a></li>
           <li><i class="fa fa-th-list"></i>{{ range $i,$p:= .Params.Categories }}{{if ne $i 0}},{{end}}<a
               href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}" class="ml-1">{{ . | humanize }} </a>
             {{end}}</li>
