--- a/themes/timeframe/layouts/guest/list.html
+++ b/themes/timeframe/layouts/guest/list.html
@@ -6,7 +6,7 @@
       </div>
       <div class="container">
         <div class="row justify-content-center">
-      {{ $paginator := .Paginate (where .Site.RegularPages "Section" "author") }}
+      {{ $paginator := .Paginate (where .Site.RegularPages "Section" "guest") }}
       {{ range $paginator.Pages }}
       <div class="col-lg-5 col-sm-6">
         <article class="card">
